[package]
name = "sstop"
version = "0.1.5"
authors = ["Dawid J. Kubis <dawid.kubis3@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Dawidkubis/sstop/"
description = "a simple battery notification utility"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "3.6.3"
anyhow = "1.0.26"
structopt = "0.3.12"
